Grace/tests/gibbs/errors/t044.grace
// ERROR = P1032
method(meaning) {
    print(42)
}
